# air-raid-forecasting-ukraine

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  REFLECTION.txt  docker-compose.yml  pyproject.toml  requirements-full.txt  requirements-optional.txt  requirements.txt
.streamlit/: config.toml
configs/: config.yaml
dashboard/: streamlit_app.py
data/: README.md
data/processed/: alerts_events_labeled.parquet  forecast_national.parquet  panel_national_hourly.parquet  panel_region_hourly.parquet
notebooks/: 01_data_acquisition.ipynb  02_cleaning_validation.ipynb  03_eda.ipynb  04_feature_engineering.ipynb  05_modeling_backtesting.ipynb  06_explainability.ipynb
reports/: _national_summary.json  count_national_per_fold.csv  count_national_ranking.csv  count_national_ranking.json  count_national_ranking.md  eda_summary.json  experiments.jsonl  final_report.md  metrics_summary.json  proba_region_per_fold.csv  proba_region_ranking.csv  proba_region_ranking.json  proba_region_ranking.md  production_count_explainability.json  production_count_permutation_importance.csv  training_report.md
scripts/: build_final_report.py  build_notebooks.py
service/: main.py
src/air_raid_forecasting/: __init__.py  config.py  eda.py  logging_utils.py
src/air_raid_forecasting/dashboard/: __init__.py  app.py
src/air_raid_forecasting/data/: __init__.py  clean.py  geo.py  ingest.py  panel.py  regions.py
src/air_raid_forecasting/evaluation/: __init__.py  backtest.py  compare.py  experiments.py  explain.py  metrics.py
src/air_raid_forecasting/features/: __init__.py  build.py  calendar.py  news.py  targets.py  telegram.py  timeseries.py
src/air_raid_forecasting/models/: __init__.py  advanced.py  auxiliary.py  base.py  baselines.py  ml.py  persistence.py  registry.py  statistical.py
src/air_raid_forecasting/pipeline/: __init__.py  cli.py  run_all.py  run_eda.py  run_features.py  run_ingest.py  run_preprocess.py  run_train.py
src/air_raid_forecasting/service/: app.py  predictor.py  schemas.py
tests/: conftest.py  test_data.py  test_features.py  test_geo.py  test_metrics.py  test_models_backtest.py  test_service.py
