[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "air-raid-forecasting"
version = "1.0.0"
description = "Time-series analysis and forecasting of air raid alerts in Ukraine — a miniature defense-analytics platform."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Air Raid Forecasting" }]
keywords = ["time-series", "forecasting", "air-raid", "ukraine", "defense-analytics"]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "holidays>=0.45",
    "python-dateutil>=2.8",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "tqdm>=4.66",
    "requests>=2.31",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "catboost>=1.2",
    "prophet>=1.1.5",
    "shap>=0.45",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "streamlit>=1.33",
]

[project.optional-dependencies]
# Deep-learning models. Kept optional because torch is a large download and
# pytorch-forecasting pins narrow torch/lightning ranges that frequently break.
deep = [
    "torch>=2.2",
]
tft = [
    "torch>=2.2",
    "pytorch-forecasting>=1.0",
    "lightning>=2.2",
]
# Optional auto-ARIMA. The project has a statsmodels-based fallback if absent.
arima = [
    "pmdarima>=2.0.4",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "jupyter>=1.0",
    "nbformat>=5.9",
    "httpx>=0.27",
]

[project.scripts]
arf = "air_raid_forecasting.pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
air_raid_forecasting = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]
